# jackdaoud-marketing-analysis

./: .gitignore  index.ipynb  pyproject.toml  readme.md
